@@ -75,6 +75,12 @@
               </Win32>
             </Options>
           </Linking>
+          <Other>
+            <CustomOptions Value="-dBGRAControls"/>
+            <OtherDefines Count="1">
+              <Define0 Value="BGRAControls"/>
+            </OtherDefines>
+          </Other>
         </CompilerOptions>
       </Item2>
     </BuildModes>
@@ -267,6 +273,12 @@
         </Win32>
       </Options>
     </Linking>
+    <Other>
+      <CustomOptions Value="-dBGRAControls"/>
+      <OtherDefines Count="1">
+        <Define0 Value="BGRAControls"/>
+      </OtherDefines>
+    </Other>
   </CompilerOptions>
   <Debugging>
     <Exceptions Count="5">
