@@ -7,7 +7,6 @@ object DigIt_Main: TDigIt_Main
   ClientHeight = 812
   ClientWidth = 1411
   DesignTimePPI = 120
-  LCLVersion = '4.99.0.0'
   WindowState = wsMaximized
   OnCloseQuery = FormCloseQuery
   OnCreate = FormCreate
@@ -131,14 +130,14 @@ object DigIt_Main: TDigIt_Main
       end
       object tbCaptSep1: TToolButton
         Left = 53
-        Height = 8
+        Height = 26
         Top = 2
         Caption = 'tbCaptSep1'
         Style = tbsSeparator
       end
       object tbCaptSep2: TToolButton
         Left = 113
-        Height = 8
+        Height = 26
         Top = 2
         Caption = 'tbCaptSep2'
         Style = tbsSeparator
@@ -740,7 +739,7 @@ object DigIt_Main: TDigIt_Main
         ParentFont = False
         TabOrder = 0
         Value = 21
-        OnChange = edPageWidthChange
+        OnEditingDone = edPageWidthChange
       end
       object edPageHeight: TFloatSpinEdit
         Left = 81
@@ -752,7 +751,7 @@ object DigIt_Main: TDigIt_Main
         ParentFont = False
         TabOrder = 1
         Value = 29.7
-        OnChange = edPageHeightChange
+        OnEditingDone = edPageHeightChange
       end
       object BCLabel11: TBCLabel
         Left = 25
@@ -931,7 +930,7 @@ object DigIt_Main: TDigIt_Main
       end
       object tbSepMenu: TToolButton
         Left = 76
-        Height = 8
+        Height = 62
         Top = 0
         Caption = 'tbSepMenu'
         Style = tbsSeparator
@@ -959,7 +958,7 @@ object DigIt_Main: TDigIt_Main
       end
       object tbSepTake: TToolButton
         Left = 347
-        Height = 8
+        Height = 62
         Top = 0
         Caption = 'tbSepTake'
         Style = tbsSeparator
@@ -1020,7 +1019,7 @@ object DigIt_Main: TDigIt_Main
       Wrapable = False
       object tbSepCrop: TToolButton
         Left = 1
-        Height = 8
+        Height = 62
         Top = 0
         Caption = 'tbSepCrop'
         Style = tbsSeparator
@@ -1051,7 +1050,7 @@ object DigIt_Main: TDigIt_Main
       end
       object tbSepClear: TToolButton
         Left = 348
-        Height = 8
+        Height = 62
         Top = 0
         Caption = 'tbSepClear'
         Style = tbsSeparator
@@ -1341,13 +1340,17 @@ object DigIt_Main: TDigIt_Main
         ItemHeight = 20
         ItemIndex = 0
         Items.Strings = (
-          'pixels'
-          'inchs'
-          'cm'
+          'Pixel'
+          'Centimeter'
+          'Millimeter'
+          'Inch'
+          'Pica '
+          'Point'
+          'Percent'
         )
         Style = csDropDownList
         TabOrder = 0
-        Text = 'pixels'
+        Text = 'Pixel'
         OnChange = edCropUnit_TypeChange
       end
       object BCLabel5: TBCLabel
